--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Poppins-medium';
+  src: url('../fonts/Poppins-Medium.woff2') format('woff2');
+  font-weight: normal; 
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,7 +13,7 @@
 
 body,
 input {
-  font-family: "Amaranth", sans-serif;
+  font-family: "Poppins-medium", sans-serif;
 }
 
 .container {
